--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches: develop
   pull_request:
     branches: develop
+  workflow_dispatch:
+  
 env:
   otp-version: '23.1.2'
   elixir-version: '1.11.2'
